crates/toml_edit/tests/snapshots/invalid/string/bad-hex-esc-02.stderr
TOML parse error at line 1, column 20
  |
1 | bad-hex-esc-02 = "\xG0"
  |                    ^
missing escaped value, expected `b`, `f`, `n`, `r`, `\`, `"`, `u`, `U`
